change page title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Blog o podróżach z psem – makulscy.com</title>
+  <title>Blog o podróżach z psem – Makulscy.com</title>
   <meta name="author" content="makulscy.com" />
   <meta name="description" content="Pomysły na podróże z psem, gotowe przewodniki, dużo zdjęć i wskazówek jak przygotować się do wspólnego wyjazdu - zapraszamy!" />
   <link rel="stylesheet" href="style.css" />
